fix: Change z-index of header contianer

--- a/layout/Header/Header.module.scss
+++ b/layout/Header/Header.module.scss
@@ -13,7 +13,7 @@
   position: sticky;
   background-color: white;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .contact {
